# trevlix

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile  IMPROVEMENTS.md  IMPROVEMENTS_10.md  INSTALLATION.html  LAST_WORK.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  TODO.md  VERSION.md  WORKFLOW_RULES.md  about.html  ai_engine.py  api-docs.html  changelog.html  dashboard.html  docker-compose.dev.yml  docker-compose.yml  faq.html  index.html  install.sh  motd.sh  pyproject.toml  requirements.txt  roadmap.html  robots.txt  security.html  server.py  shared-nav.css  sitemap.xml  (+4 more)
.githooks/: post-commit  pre-push
app/: __init__.py
docker/: mysql-init.sql  nginx.conf
docs/: API.md  ARCHITECTURE.md  DATABASE.md  MODULE_MAPPING.md  SECURITY.md  SERVICES.md  SETUP.md  TRADING.md
legacy/: __init__.py  ai_engine.py
routes/: __init__.py  auth.py  dashboard.py  websocket.py
scripts/: check_i18n_keys.py  deep_scan.py
services/: __init__.py  adaptive_weights.py  alert_escalation.py  auto_healing.py  backtest.py  cache.py  circuit_breaker.py  cluster_control.py  config.py  cryptopanic.py  db_pool.py  encryption.py  exchange_factory.py  exchange_manager.py  feature_flags.py  git_ops.py  grid_trading.py  health_check.py  indicator_cache.py  knowledge.py  llm_providers.py  market_data.py  market_links.py  mcp_tools.py  metrics_collector.py  monte_carlo.py  nonkyc_adapter.py  notifications.py  ollama_client.py  passwords.py  performance_attribution.py  rate_limiter.py  redis_market_cache.py  request_context.py  revenue_tracking.py  risk.py  shutdown.py  smart_exits.py  strategies.py  structured_logger.py  (+8 more)
tasks/: deepscan_report.md  lessons.md  memory.md  plan.md  todo.md
templates/: 404.html  INSTALLATION.html  about.html  api-docs.html  auth.html  auth_admin.html  changelog.html  dashboard.html  faq.html  index.html  roadmap.html  security.html  strategies.html
tests/: __init__.py  conftest.py  test_adaptive_weights.py  test_admin_user_validation.py  test_aggregated_balance.py  test_ai_engine_init.py  test_alert_escalation.py  test_api.py  (+57 more)
(+75 files in other folders)
