# ╔══════════════════════════════════════════════════════════════╗
# ║  TREVLIX – pyproject.toml                                    ║
# ║  Projektmetadaten & Tool-Konfiguration                       ║
# ╚══════════════════════════════════════════════════════════════╝

[project]
name = "trevlix"
version = "1.5.2"
description = "Algorithmic Cryptocurrency Trading Bot with ML-powered strategies"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["crypto", "trading", "bot", "ml", "algorithmic-trading"]

[project.urls]
Homepage = "https://trevlix.dev"
Repository = "https://github.com/itsamemedev/Trevlix"
Issues = "https://github.com/itsamemedev/Trevlix/issues"
Changelog = "https://github.com/itsamemedev/Trevlix/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths     = ["tests"]
python_files  = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts       = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning:lightgbm",
]

[tool.coverage.run]
source  = ["."]
omit    = [
    "venv/*",
    ".venv/*",
    "tests/*",
    "*/site-packages/*",
    "static/*",
    "templates/*",
]

[tool.coverage.report]
show_missing   = true
skip_covered   = false
exclude_lines  = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass$",
]

[tool.ruff]
line-length    = 100
target-version = "py311"
exclude        = ["venv", ".venv", "__pycache__", "*.pyc"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # Zeilenlänge (durch line-length gesetzt)
    "B008",  # function-call-in-default-argument (Flask-Dependency-Injection)
    "B904",  # raise-without-from (häufig in except-Blöcken)
]

[tool.ruff.lint.isort]
known-first-party = ["services", "routes"]
